# graddy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  wiki-sync.yml
config/: default.yaml  targets.example.yaml
docs/: alerting.md  checks.md  cli.md  configuration.md  deployment.md  groups-and-tags.md  index.md  installation.md  targets.md  web-gui.md
src/network_bot/: config.py  hostname_resolver.py  main.py  scheduler.py
src/network_bot/alerting/: __init__.py  base.py  dispatcher.py  email_alert.py
src/network_bot/checks/: __init__.py  enum4linux_check.py  exposed_paths.py  gobuster_check.py  headers_check.py  http_check.py  hydra_check.py  masscan_check.py  nmap_scan.py  nuclei_check.py  port_scan.py  sqlmap_check.py  ssl_check.py  subnet_scan.py
src/network_bot/reports/: __init__.py  generator.py
src/network_bot/web/: __init__.py  app.py  resolver.py  scheduler_service.py  validation.py
src/viridis/: config.py  cve_lookup.py  hostname_resolver.py  main.py  scheduler.py  threat_feeds.py
src/viridis/alerting/: discord.py  dispatcher.py  email_alert.py  ntfy.py  pagerduty.py  slack.py  splunk.py  teams.py  telegram.py  webhook.py
src/viridis/checks/: __init__.py  auth_check.py  base.py  cipher_check.py  dns_check.py  enum4linux_check.py  exposed_paths.py  gobuster_check.py  headers_check.py  http_check.py  hydra_check.py  masscan_check.py  nmap_scan.py  nuclei_check.py  smb_check.py  smtp_check.py  (+4 more)
wiki/: Alerting.md  Deployment-Guide.md  Home.md  Managing-Targets.md  README.md  Security-Checks-Reference.md  Web-GUI-Guide.md
(+73 files in other folders)
