[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-bot"
version = "1.0.0"
description = "Autonomous network security testing bot with web GUI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "dnspython>=2.4",
    "schedule>=1.2",
    "rich>=13.0",
    "jinja2>=3.1",
    "cryptography>=41.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
]

[project.scripts]
network-bot = "network_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
network_bot = ["web/templates/*.html"]
