[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-bot"
version = "2.0.0"
description = "Jade – Comprehensive penetration testing & red team platform with web GUI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "dnspython>=2.4",
    "schedule>=1.2",
    "rich>=13.0",
    "jinja2>=3.1",
    "cryptography>=41.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
    "python-nmap>=0.7.1",
    "APScheduler>=3.10",
    "aiohttp>=3.9",
    "ldap3>=2.9",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "python-crontab>=3.0",
]

[project.scripts]
network-bot = "network_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
network_bot = ["web/templates/*.html"]
